--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -1,1 +1,87 @@
-test
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_squared_error(y1, yp):\n",
+    "    mae = sum(np.power((y1 - yp), 2)) / len(y1)\n",
+    "    return mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "w = 4\n",
+    "b = 0.5\n",
+    "x_lin = np.linspace(0, 100, 101)\n",
+    "rnd = np.random.randn(101)\n",
+    "y = (x_lin + rnd * 5) * w + b\n",
+    "y_hat = x_lin * w + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE= 406.8262114753981\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "MSE = mean_squared_error(y,y_hat)\n",
+    "print (\"MSE=\", MSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
