--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -157,13 +157,32 @@
     "\n",
     "請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
     "\n",
+    "[Heart Disease UCI](https://www.kaggle.com/ronitf/heart-disease-uci)\n",
+    "\n",
+    "\n",
     "1. 你選的這組資料為何重要\n",
     "\n",
+    "答：可研究人類心臟病患的好發是否與特定族群或因素如年紀、性別、胸痛、血壓、心電圖檢查結果等14個可能因素之間的關連性為何，提供醫師作為診斷參考依據。\n",
+    "\n",
+    "\n",
     "2. 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
+    "答：\n",
+    "Creators:\n",
+    "Hungarian Institute of Cardiology. Budapest: Andras Janosi, M.D.\n",
+    "University Hospital, Zurich, Switzerland: William Steinbrunn, M.D.\n",
+    "University Hospital, Basel, Switzerland: Matthias Pfisterer, M.D.\n",
+    "V.A. Medical Center, Long Beach and Cleveland Clinic Foundation: Robert Detrano, M.D., Ph.D.\n",
     "\n",
     "3. 蒐集而來的資料型態為何\n",
     "\n",
+    "答：\n",
+    "資料存檔型態為csv檔，共有14個欄位。\n",
+    "\n",
+    "\n",
     "4. 這組資料想解決的問題如何評估\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# [作業3]\n",
     "\n",
