--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -184,10 +184,7 @@
     "4. 這組資料想解決的問題如何評估\n",
     "\n",
     "答：\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "評估心臟病發病的可能性是否可能與所羅列的某項參數值呈現正相關性(相關係數)等。\n",
     "\n",
     "\n",
     "# [作業3]\n",
@@ -195,12 +192,17 @@
     "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
     "\n",
     "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
+    "不同時段、地段、駕駛對於車隊載客率是否提升、閒置率提否下降為提升業績之基本判斷標準。\n",
     "\n",
     "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
+    "可利用載客車隊所架設之app，搜集載客之時段、載客率、服務時間，載客地段等數據，回傳至管理中心資料庫進行分析。\n",
     "\n",
     "3. 蒐集而來的資料型態為何\n",
+    "可能為資料庫型態或檔案型態。\n",
     "\n",
-    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)"
+    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
+    "分析地段、時段、駕駛人員素質與載客率是否呈現正\n",
+    "\n"
    ]
   },
   {
