--- a/homework/Day_018_HW.ipynb
+++ b/homework/Day_018_HW.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -802,19 +802,19 @@
        "[10 rows x 111 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub_train = app_train.groupby('YEARS_BIRTH_BIN').mean()\n",
-    "sub_train"
+    "age_grp = app_train.groupby('YEARS_BIRTH_BIN').mean()\n",
+    "age_grp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "<BarContainer object of 10 artists>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -841,8 +841,8 @@
     }
    ],
    "source": [
-    "x = range(len(sub_train.index))\n",
-    "y = sub_train['TARGET']\n",
+    "x = range(len(age_grp.index))\n",
+    "y = age_grp['TARGET']\n",
     "plt.bar(x, y)\n"
    ]
   },
