--- a/homework/ans/Day_022_Introduction_of_Feature Engineering_Ans.ipynb
+++ b/homework/ans/Day_022_Introduction_of_Feature Engineering_Ans.ipynb
@@ -26,23 +26,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 作業1\n",
     "* 下列A~E五個程式區塊中，哪一塊是特徵工程?\n",
+    "> 程式區塊 C\n",
     "\n",
     "# 作業2\n",
     "* 對照程式區塊 B 與 C 的結果，請問那些欄位屬於\"類別型欄位\"? (回答欄位英文名稱即可) \n",
+    "> Name, Sex, Ticket, Cabin, Embarked 等五個欄位  \n",
+    ">  \n",
+    "> 註 : 像是 Pclass 這樣的欄位, 雖然就意義上而言是類別型欄位, 但因為裡面都是數值,  \n",
+    "> 因此 Python 讀取時會先將其判定為數值欄位, 希望同學了解語言判定與人為理解上的落差,  \n",
+    "> 因為 Python 不須宣告物件型別, 都是自動判定, 這點雖然方便, 卻也是初學者常常遇到的困難所在\n",
     "\n",
     "# 作業3\n",
-    "* 續上題，請問哪個欄位是\"目標值\"?"
+    "* 續上題，請問哪個欄位是\"目標值\"?\n",
+    "> Survived 是目標值"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +56,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +67,7 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
     "\n",
-    "data_path = '../data/FeatureType/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "df_train.shape"
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +113,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>3</td>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
@@ -121,7 +126,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
        "      <td>female</td>\n",
@@ -134,7 +139,7 @@
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
        "      <td>female</td>\n",
@@ -147,7 +152,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
        "      <td>female</td>\n",
@@ -160,7 +165,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
@@ -192,7 +197,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,9 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Python\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -247,7 +260,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.118683</td>\n",
        "      <td>1.0</td>\n",
@@ -260,7 +273,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.218989</td>\n",
        "      <td>0.0</td>\n",
@@ -273,7 +286,7 @@
        "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.400459</td>\n",
        "      <td>0.0</td>\n",
@@ -286,7 +299,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.323124</td>\n",
        "      <td>0.0</td>\n",
@@ -299,7 +312,7 @@
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.016845</td>\n",
        "      <td>1.0</td>\n",
@@ -331,7 +344,7 @@
        "4  0.000000  1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -382,20 +395,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#解答：\n",
-    "#作業一：特徵工程包括程式區塊 C\n",
-    "#作業二：類別型欄位包括：Name, Sex, Ticket, Cabin, Embarked\n",
-    "#作業三：目標值欄位為 Survived\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -416,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
