--- a/homework/Day_024_LabelEncoder_and_OneHotEncoder_Ans.ipynb
+++ b/homework/Day_024_LabelEncoder_and_OneHotEncoder_Ans.ipynb
@@ -35,12 +35,15 @@
    "source": [
     "# 作業1\n",
     "* 觀察範例，在房價預測中調整標籤編碼(Label Encoder) / 獨熱編碼 (One Hot Encoder) 方式，  \n",
-    "對於線性迴歸以及梯度提升樹兩種模型，何者影響比較大?"
+    "對於線性迴歸以及梯度提升樹兩種模型，何者影響比較大?\n",
+    "> 線性迴歸時, 獨熱編碼不僅時間花費很多, 準確率也大幅下降  \n",
+    "梯度提升樹時, 分數有小幅提升, 執行時間則約為兩倍  \n",
+    "可見獨熱不僅計算時間會增加不少, 也不太適合用在線性迴歸上"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +81,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>3</td>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
@@ -91,7 +94,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
        "      <td>female</td>\n",
@@ -104,7 +107,7 @@
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
        "      <td>female</td>\n",
@@ -117,7 +120,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
        "      <td>female</td>\n",
@@ -130,7 +133,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
@@ -162,7 +165,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +180,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "data_path = '../data/FeatureType/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +235,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
        "      <td>A/5 21171</td>\n",
@@ -240,7 +243,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
        "      <td>female</td>\n",
        "      <td>PC 17599</td>\n",
@@ -248,7 +251,7 @@
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
        "      <td>female</td>\n",
        "      <td>STON/O2. 3101282</td>\n",
@@ -256,7 +259,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
        "      <td>female</td>\n",
        "      <td>113803</td>\n",
@@ -264,7 +267,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
        "      <td>373450</td>\n",
@@ -291,7 +294,7 @@
        "4            373450  None        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,23 +321,23 @@
    },
    "source": [
     "# 作業2\n",
-    "* 鐵達尼號例題中，標籤編碼 / 獨熱編碼又分別對預測結果有何影響? (Hint : 參考今日範例)"
+    "* 鐵達尼號例題中，標籤編碼 / 獨熱編碼又分別對預測結果有何影響? (Hint : 參考今日範例)\n",
+    "> 羅吉斯迴歸時, 獨熱編碼執行時間較長, 但分數僅微幅提升"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.780004837244799"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape : (891, 5)\n",
+      "score : 0.780004837244799\n",
+      "time : 0.02396845817565918 sec\n"
+     ]
     }
    ],
    "source": [
@@ -342,35 +345,38 @@
     "df_temp = pd.DataFrame()\n",
     "for c in df.columns:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "    \n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
     "train_X = df_temp[:train_num]\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
+    "estimator = LogisticRegression()\n",
+    "start = time.time()\n",
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8013346043513216"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape : (891, 2429)\n",
+      "score : 0.8013346043513216\n",
+      "time : 0.10138106346130371 sec\n"
+     ]
     }
    ],
    "source": [
     "# 獨熱編碼 + 羅吉斯迴歸\n",
     "df_temp = pd.get_dummies(df)\n",
-    "\n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
     "train_X = df_temp[:train_num]\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
+    "estimator = LogisticRegression()\n",
+    "start = time.time()\n",
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
@@ -399,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
