--- a/homework/Day_025_HW.ipynb
+++ b/homework/Day_025_HW.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -361,21 +361,7 @@
       "start------Sex\n",
       "start------Ticket\n",
       "start------Cabin\n",
-      "start------Embarked\n",
-      "     Name_mean  Sex_mean  Ticket_mean  Cabin_mean  Embarked_mean\n",
-      "0            0  0.188908          0.0    0.299854       0.336957\n",
-      "1            1  0.742038          1.0    1.000000       0.553571\n",
-      "2            1  0.742038          1.0    0.299854       0.336957\n",
-      "3            1  0.742038          0.5    0.500000       0.336957\n",
-      "4            0  0.188908          0.0    0.299854       0.336957\n",
-      "..         ...       ...          ...         ...            ...\n",
-      "886          0  0.188908          0.0    0.299854       0.336957\n",
-      "887          1  0.742038          1.0    1.000000       0.336957\n",
-      "888          0  0.742038          0.0    0.299854       0.336957\n",
-      "889          1  0.188908          1.0    1.000000       0.553571\n",
-      "890          0  0.188908          0.0    0.299854       0.389610\n",
-      "\n",
-      "[891 rows x 5 columns]\n"
+      "start------Embarked\n"
      ]
     },
     {
@@ -384,7 +370,7 @@
        "1.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,15 +394,7 @@
     "\n",
     "train_X = data\n",
     "estimator = LogisticRegression(solver='liblinear')\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n"
    ]
   },
   {
