--- a/homework/ans/Day_024_LabelEncoder_and_OneHotEncoder_Ans.ipynb
+++ b/homework/ans/Day_024_LabelEncoder_and_OneHotEncoder_Ans.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# [作業目標]\n",
-    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察均值編碼的效果"
+    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察標籤編碼與獨編碼熱的影響"
    ]
   },
   {
@@ -23,8 +23,8 @@
    "metadata": {},
    "source": [
     "# [作業重點]\n",
-    "- 仿造範例, 完成標籤編碼與均值編碼搭配邏輯斯迴歸的預測\n",
-    "- 觀察標籤編碼與均值編碼在特徵數量 / 邏輯斯迴歸分數 / 邏輯斯迴歸時間上, 分別有什麼影響 (In[3], Out[3], In[4], Out[4]) "
+    "- 回答在範例中的觀察結果\n",
+    "- 觀察標籤編碼與獨熱編碼, 在特徵數量 / 邏輯斯迴歸分數 / 邏輯斯迴歸時間上, 分別有什麼影響 (In[3], Out[3], In[4], Out[4]) "
    ]
   },
   {
@@ -34,7 +34,11 @@
    },
    "source": [
     "# 作業1\n",
-    "* 請仿照範例，將鐵達尼範例中的類別型特徵改用均值編碼實作一次"
+    "* 觀察範例，在房價預測中調整標籤編碼(Label Encoder) / 獨熱編碼 (One Hot Encoder) 方式，  \n",
+    "對於線性迴歸以及梯度提升樹兩種模型，何者影響比較大?\n",
+    "> 線性迴歸時, 獨熱編碼不僅時間花費很多, 準確率也大幅下降  \n",
+    "梯度提升樹時, 分數有小幅提升, 執行時間則約為兩倍  \n",
+    "可見獨熱不僅計算時間會增加不少, 也不太適合用在線性迴歸上"
    ]
   },
   {
@@ -77,7 +81,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>3</td>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
@@ -90,7 +94,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
        "      <td>female</td>\n",
@@ -103,7 +107,7 @@
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
        "      <td>female</td>\n",
@@ -116,7 +120,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
        "      <td>female</td>\n",
@@ -129,7 +133,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
@@ -176,7 +180,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "data_path = '../data/FeatureType/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -231,7 +235,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
        "      <td>A/5 21171</td>\n",
@@ -239,7 +243,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
        "      <td>female</td>\n",
        "      <td>PC 17599</td>\n",
@@ -247,7 +251,7 @@
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
        "      <td>female</td>\n",
        "      <td>STON/O2. 3101282</td>\n",
@@ -255,7 +259,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
        "      <td>female</td>\n",
        "      <td>113803</td>\n",
@@ -263,7 +267,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
        "      <td>373450</td>\n",
@@ -317,85 +321,70 @@
    },
    "source": [
     "# 作業2\n",
-    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
+    "* 鐵達尼號例題中，標籤編碼 / 獨熱編碼又分別對預測結果有何影響? (Hint : 參考今日範例)\n",
+    "> 羅吉斯迴歸時, 獨熱編碼執行時間較長, 但分數僅微幅提升"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.780004837244799"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape : (891, 5)\n",
+      "score : 0.780004837244799\n",
+      "time : 0.02396845817565918 sec\n"
+     ]
     }
    ],
    "source": [
-    "# 對照組 : 標籤編碼 + 邏輯斯迴歸\n",
+    "# 標籤編碼 + 羅吉斯迴歸\n",
     "df_temp = pd.DataFrame()\n",
     "for c in df.columns:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "\n",
     "train_X = df_temp[:train_num]\n",
-    "\n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n"
+    "estimator = LogisticRegression()\n",
+    "start = time.time()\n",
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8350366889413987"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape : (891, 2429)\n",
+      "score : 0.8013346043513216\n",
+      "time : 0.10138106346130371 sec\n"
+     ]
     }
    ],
    "source": [
-    "# 均值編碼 + 邏輯斯迴歸\n",
-    "data = pd.concat([df[:train_num], train_Y], axis=1)\n",
-    "#print(data)\n",
-    "for c in data.columns:\n",
-    "    if c=='Survived':\n",
-    "        continue\n",
-    "    mean_df = data.groupby([c])['Survived'].mean().reset_index()\n",
-    "    mean_df.columns = [c, f'{c}_mean']\n",
-    "#     print(mean_df)\n",
-    "    data = pd.merge(data, mean_df, on=c, how='left')\n",
-    "    data = data.drop([c] , axis=1)\n",
-    "# 如果欄位類別數太多, 需要先剔除, 否則會 overfit (正確率會到達 1.0)\n",
-    "data = data.drop(['Survived','Name_mean', 'Ticket_mean'], axis=1)\n",
-    "# print(data)\n",
-    "\n",
-    "train_X = data\n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n"
+    "# 獨熱編碼 + 羅吉斯迴歸\n",
+    "df_temp = pd.get_dummies(df)\n",
+    "train_X = df_temp[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "start = time.time()\n",
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -416,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
