--- a/homework/raw/Day_012_HW.ipynb
+++ b/homework/raw/Day_012_HW.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# [作業目標]\n",
-    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察均值編碼的效果"
+    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察填補缺值以及 標準化 / 最小最大化 對數值的影響"
    ]
   },
   {
@@ -23,18 +23,8 @@
    "metadata": {},
    "source": [
     "# [作業重點]\n",
-    "- 仿造範例, 完成標籤編碼與均值編碼搭配邏輯斯迴歸的預測\n",
-    "- 觀察標籤編碼與均值編碼在特徵數量 / 邏輯斯迴歸分數 / 邏輯斯迴歸時間上, 分別有什麼影響 (In[3], Out[3], In[4], Out[4]) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# 作業1\n",
-    "* 請仿照範例，將鐵達尼範例中的類別型特徵改用均值編碼實作一次"
+    "- 觀察替換不同補缺方式, 對於特徵的影響 (In[4]~In[6], Out[4]~Out[6])\n",
+    "- 觀察替換不同特徵縮放方式, 對於特徵的影響 (In[7]~In[8], Out[7]~Out[8])"
    ]
   },
   {
@@ -77,7 +67,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>3</td>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
@@ -90,7 +80,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
        "      <td>female</td>\n",
@@ -103,7 +93,7 @@
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Heikkinen, Miss. Laina</td>\n",
        "      <td>female</td>\n",
@@ -116,7 +106,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
        "      <td>female</td>\n",
@@ -129,7 +119,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
@@ -170,13 +160,12 @@
     "# 做完特徵工程前的所有準備 (與前範例相同)\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import copy, time\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import copy\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "data_path = '../data/FeatureType/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -197,10 +186,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 Numeric Features : ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n",
+      "5 Numeric Features : ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']\n",
       "\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#只取 int64, float64 兩種數值型欄位, 存於 num_features 中\n",
+    "num_features = []\n",
+    "for dtype, feature in zip(df.dtypes, df.columns):\n",
+    "    if dtype == 'float64' or dtype == 'int64':\n",
+    "        num_features.append(feature)\n",
+    "print(f'{len(num_features)} Numeric Features : {num_features}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -222,90 +226,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>3</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                Name     Sex  \\\n",
-       "0                            Braund, Mr. Owen Harris    male   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
-       "2                             Heikkinen, Miss. Laina  female   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
-       "4                           Allen, Mr. William Henry    male   \n",
-       "\n",
-       "             Ticket Cabin Embarked  \n",
-       "0         A/5 21171  None        S  \n",
-       "1          PC 17599   C85        C  \n",
-       "2  STON/O2. 3101282  None        S  \n",
-       "3            113803  C123        S  \n",
-       "4            373450  None        S  "
+       "   Pclass   Age  SibSp  Parch     Fare\n",
+       "0       3  22.0      1      0   7.2500\n",
+       "1       1  38.0      1      0  71.2833\n",
+       "2       3  26.0      0      0   7.9250\n",
+       "3       1  35.0      1      0  53.1000\n",
+       "4       3  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#只取類別值 (object) 型欄位, 存於 object_features 中\n",
-    "object_features = []\n",
-    "for dtype, feature in zip(df.dtypes, df.columns):\n",
-    "    if dtype == 'object':\n",
-    "        object_features.append(feature)\n",
-    "print(f'{len(object_features)} Numeric Features : {object_features}\\n')\n",
-    "\n",
-    "# 只留類別型欄位\n",
-    "df = df[object_features]\n",
-    "df = df.fillna('None')\n",
+    "# 削減文字型欄位, 只剩數值型欄位\n",
+    "df = df[num_features]\n",
     "train_num = train_Y.shape[0]\n",
     "df.head()"
    ]
@@ -316,88 +305,51 @@
     "collapsed": true
    },
    "source": [
+    "# 作業1\n",
+    "* 試著在補空值區塊, 替換並執行兩種以上填補的缺值, 看看何者比較好?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 空值補 -1, 做羅吉斯迴歸\n",
+    "df_m1 = df.fillna(-1)\n",
+    "train_X = df_m1[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n",
+    "\n",
+    "\"\"\"\n",
+    "Your Code Here\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
     "# 作業2\n",
-    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.780004837244799"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 對照組 : 標籤編碼 + 邏輯斯迴歸\n",
-    "df_temp = pd.DataFrame()\n",
-    "for c in df.columns:\n",
-    "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "\n",
-    "train_X = df_temp[:train_num]\n",
-    "\n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8350366889413987"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 均值編碼 + 邏輯斯迴歸\n",
-    "data = pd.concat([df[:train_num], train_Y], axis=1)\n",
-    "#print(data)\n",
-    "for c in data.columns:\n",
-    "    if c=='Survived':\n",
-    "        continue\n",
-    "    mean_df = data.groupby([c])['Survived'].mean().reset_index()\n",
-    "    mean_df.columns = [c, f'{c}_mean']\n",
-    "#     print(mean_df)\n",
-    "    data = pd.merge(data, mean_df, on=c, how='left')\n",
-    "    data = data.drop([c] , axis=1)\n",
-    "# 如果欄位類別數太多, 需要先剔除, 否則會 overfit (正確率會到達 1.0)\n",
-    "data = data.drop(['Survived','Name_mean', 'Ticket_mean'], axis=1)\n",
-    "# print(data)\n",
-    "\n",
-    "train_X = data\n",
-    "estimator = LogisticRegression(solver='liblinear')\n",
-    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()\n"
+    "* 使用不同的標準化方式 ( 原值 / 最小最大化 / 標準化 )，搭配羅吉斯迴歸模型，何者效果最好?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Your Code Here\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
@@ -416,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
